[package]
name = "u2_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
reqwest = {version = "0.12.15", features = ["gzip", "cookies"]}
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }